# kafka-map-reduce

./: Cargo.toml  README.md
src/: clickhouse.rs  lib.rs  main.rs  noop.rs  os_stream.rs
src/reducers/: clickhouse.rs  clickhouse_writer.rs  mod.rs  noop.rs  os_stream.rs  stdout.rs  stdout_buffer.rs
