[package]
name = "kafka-map-reduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = "0.7.12"
tokio-stream = { version = "0.1.16", features = ["full"] }
async-stream = "0.3.5"
futures = "0.3.31"
chrono = { version = "0.4.26", features = ["serde"] }
anyhow = "1.0.92"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
serde = "1.0.214"
serde_json = "1.0.132"
