[package]
name = "kafka-map-reduce"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = "0.7.14"
tokio-stream = { version = "0.1.17", features = ["full"] }
async-stream = "0.3.5"
futures = "0.3.31"
chrono = { version = "0.4.40", features = ["serde"] }
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = "1.0.219"
serde_json = "1.0.140"
